syntax = "proto3"
;

package vl.core;


message RequestCode {

  string requestId = 1;

  string clientId = 2;

}